service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-flask-app-service
spec:
  selector:
    app: my-flask-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
  type: ClusterIP
